# NetPulse-ML

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
scripts/: e2e_test.py  import_bbst.py  seed_features.py
src/netpulse_ml/: __init__.py  config.py  dependencies.py  main.py
src/netpulse_ml/agents/: graph.py  nodes.py  orchestrator.py  smartos_client.py  state.py  tools.py
src/netpulse_ml/api/: router.py  schemas.py
src/netpulse_ml/api/v1/: agents.py  anomalies.py  chat.py  churn.py  clusters.py  forecasts.py  health.py  labels.py  models.py  recommendations.py  routers.py  websocket_updates.py
src/netpulse_ml/db/: engine.py  models.py
src/netpulse_ml/features/: device_features.py  store.py  temporal.py
src/netpulse_ml/ingestion/: mqtt_consumer.py  parsers.py  telemetry_bridge.py  validators.py
src/netpulse_ml/llm/: embedder.py  indexer.py  prompts.py  provider.py  rag.py  vector_store.py
src/netpulse_ml/models/: anomaly_detector.py  base.py  churn_predictor.py  fleet_clusterer.py  qoe_forecaster.py  registry.py
src/netpulse_ml/monitoring/: alerts.py  drift.py
src/netpulse_ml/notifications/: channels.py  dispatcher.py
src/netpulse_ml/serving/: cache.py  predictor.py
src/netpulse_ml/training/: pipeline.py  scheduler.py
tests/: conftest.py
tests/test_agents/: test_nodes.py  test_tools.py
tests/test_features/: test_device_features.py
tests/test_ingestion/: test_parsers.py
tests/test_models/: test_anomaly_detector.py  test_churn_predictor.py  test_fleet_clusterer.py
