[project]
name = "netpulse-ml"
version = "0.1.0"
description = "AI/ML backend for NetPulse Admin Console - anomaly detection, churn prediction, QoE forecasting, fleet segmentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # MQTT
    "gmqtt>=0.7.0",
    # ML - Core
    "scikit-learn>=1.6.0",
    "statsmodels>=0.14.4",
    "shap>=0.46.0",
    "joblib>=1.4.0",
    "passlib>=1.7.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "polars>=1.17.0",
    # ML tracking
    "mlflow>=2.19.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Agent framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # LLM / RAG
    "sentence-transformers>=3.3.0",
    "pgvector>=0.3.0",
    "websockets>=14.0",
    # Utilities
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netpulse_ml"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # Line too long
    "E741",   # Ambiguous variable name (l, O) - common in ML
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806"]
"src/netpulse_ml/models/*" = ["N806"]
"src/netpulse_ml/training/*" = ["N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
